meta, comment, video
Update semana 4, mais imagens 1 video, mais metas, comentário para não me esquecer de modificar aquela parte quando souber fazer css

--- a/Project/image_page/battle-girl.html
+++ b/Project/image_page/battle-girl.html
@@ -6,6 +6,8 @@
     <title>mikie</title>
 </head>
 <body>
-   <a href="/portfolio.html">oi</a> 
+   <a href="/portfolio.html">voltar</a> 
+   <p><img src="/Project/images/battle-girl/battle_girl_big.jpg" alt="battle-girl-big" width="100%"></p>
+
 </body>
 </html>
