--- a/Project/image_page/gate.html
+++ b/Project/image_page/gate.html
@@ -6,6 +6,8 @@
     <title>mikie</title>
 </head>
 <body>
-   <a href="/portfolio.html">oi</a> 
+   <a href="/portfolio.html">voltar</a> 
+   <p><img src="/Project/images/gates/gates_big.png" alt="gates_big" width="100%"></p>
+
 </body>
 </html>
