--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="josé feliciano">
+    <meta name="keywords" content="porfólio, design, 3D, 3D Designer, 3D Moduler, Characters">
     <title>index</title>
 </head>
 <body>
