--- a/portfolio.html
+++ b/portfolio.html
@@ -15,10 +15,11 @@
 
     <main>
     <br>
-     <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl.jpg" alt="battle-girl" height="20%" width="20%"></a>
-    <a href="/Project/image_page/gate.html"><img src="/Project/images/gates.png" alt="gates" width="20%" height="20%"></a>
-    <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie.jpg" alt="mikie" width="20%" height="20%"></a>
-    <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao.png" alt="patrao" width="20%" height="20%"></a>
+     <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl/battle-girl.jpg" alt="battle-girl" height="20%" width="20%"></a>
+    <a href="/Project/image_page/gate.html"><img src="/Project/images/gates/gates.png" alt="gates" width="20%" height="20%"></a>
+    <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie/mikie.jpg" alt="mikie" width="20%" height="20%"></a>
+    <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao/patrao.png" alt="patrao" width="20%" height="20%"></a>
+    <a href="/Project/image_page/gun.html"><img src="/Project/images/gun/bartek-nowak-6.jpg" alt="gun" width="20%" height="20%"></a>
     </main>
 
 </body>
