--- a/portfolio.html
+++ b/portfolio.html
@@ -4,22 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="header.css">
 </head>
 
 <body>
     <header>
-    work
-    <a href="/Project/about.html">about</a>
-    <a href="/Project/shop.html">shop</a>
+        <nav>
+            <ul>
+                <li> <a id="btnWork" href="#">work</a></li>
+                <li> <a href="/Project/about.html">about</a></li>
+                <li> <a href="/Project/shop.html">shop</a></li>
+             </ul>
+        </nav>
     </header>
 
     <main>
-    <br>
-     <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl/battle-girl.jpg" alt="battle-girl" height="20%" width="20%"></a>
-    <a href="/Project/image_page/gate.html"><img src="/Project/images/gates/gates.png" alt="gates" width="20%" height="20%"></a>
-    <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie/mikie.jpg" alt="mikie" width="20%" height="20%"></a>
-    <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao/patrao.png" alt="patrao" width="20%" height="20%"></a>
-    <a href="/Project/image_page/gun.html"><img src="/Project/images/gun/bartek-nowak-6.jpg" alt="gun" width="20%" height="20%"></a>
+        <div class="container">
+            
+            <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl/battle-girl.jpg" alt="battle-girl" height="23%" width="23%" ></a>
+            <a href="/Project/image_page/gate.html"><img src="/Project/images/gates/gates.png" alt="gates" width="23%" height="23%"></a>
+            <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie/mikie.jpg" alt="mikie" width="23%" height="23%"></a>
+            <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao/patrao.png" alt="patrao" width="23%" height="23%"></a>
+            <a href="/Project/image_page/gun.html"><img src="/Project/images/gun/bartek-nowak-6.jpg" alt="gun" width="23%" height="23%"></a>
+        </div>
     </main>
 
 </body>
