--- a/Project/image_page/battle-girl.html
+++ b/Project/image_page/battle-girl.html
@@ -6,7 +6,8 @@
     <title>mikie</title>
 </head>
 <body>
-   <a href="/portfolio.html">voltar</a> 
+     <a href="/portfolio.html"> <img src="/Project/back_butao.png" alt="voltar" width="8%" height="8%"></a> 
+   
    <p><img src="/Project/images/battle-girl/battle_girl_big.jpg" alt="battle-girl-big" width="100%"></p>
 
 </body>
