--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li> <a id="btnWork" href="#">work</a></li>
+                <button><img src="/Project/images/icone.jpg" alt="me"></button>
+                <li> <a href="#">work</a></li>
                 <li> <a href="/Project/about.html">about</a></li>
                 <li> <a href="/Project/shop.html">shop</a></li>
              </ul>
@@ -21,11 +22,11 @@
     <main>
         <div class="container">
             
-            <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl/battle-girl.jpg" alt="battle-girl" height="23%" width="23%" ></a>
-            <a href="/Project/image_page/gate.html"><img src="/Project/images/gates/gates.png" alt="gates" width="23%" height="23%"></a>
-            <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie/mikie.jpg" alt="mikie" width="23%" height="23%"></a>
-            <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao/patrao.png" alt="patrao" width="23%" height="23%"></a>
-            <a href="/Project/image_page/gun.html"><img src="/Project/images/gun/bartek-nowak-6.jpg" alt="gun" width="23%" height="23%"></a>
+            <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl/battle-girl.jpg" alt="battle-girl"  ></a>
+            <a href="/Project/image_page/gate.html"><img src="/Project/images/gates/gates.png" alt="gates" ></a>
+            <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie/mikie.jpg" alt="mikie" ></a>
+            <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao/patrao.png" alt="patrao" ></a>
+            <a href="/Project/image_page/gun.html"><img src="/Project/images/gun/bartek-nowak-6.jpg" alt="gun" ></a>
         </div>
     </main>
 
