--- a/Project/image_page/battle-girl.html
+++ b/Project/image_page/battle-girl.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mikie</title>
+    <link rel="stylesheet" href="/Project/imagepage.css">
 </head>
+<header id="top" >
+    
+  <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="me"></a></button>
+</header>
 <body>
-     <a href="/portfolio.html"> <img src="/Project/back_butao.png" alt="voltar" width="8%" height="8%"></a> 
    
    <p><img src="/Project/images/battle-girl/battle_girl_big.jpg" alt="battle-girl-big" width="100%"></p>
 
 </body>
+<footer>
+    
+  <button><a href="#top"><img src="/Project/upbutton.png" alt="me"></a></button>
+</footer>
 </html>
