--- a/Project/image_page/gun.html
+++ b/Project/image_page/gun.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gun</title>
+    <link rel="stylesheet" href="/Project/imagepage.css">
 </head>
+
+<header id="top" >
+    
+     <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="me"></a></button>
+</header>
+
 <body>
-   <a href="/portfolio.html">voltar</a>
-   <p><img src="/Project/images/gun/bartek-nowak-10.jpg" alt="gun image 10" width="100%"></p> 
-   <p><img src="/Project/images/gun/bartek-nowak-17.jpg" alt="gun image 17" width="100%"></p>
-<p><video preload="auto" width="100%" loop autoplay>
-<source src="/Project/images/gun/tbrender.mp4" type="video/mp4"/> Your browser doesn't support this video. Here is a <a href="movie.mp4" target="_blank">link to the video</a> instead.
-</video></p>
-<p><img src="/Project/images/gun/bartek-nowak-24.jpg" alt="gun image 24" width="100%"></p>
-<p><img src="/Project/images/gun/bartek-nowak-26.jpg" alt="gun image 26" width="100%"></p>
-<p><img src="/Project/images/gun/bartek-nowak-29.jpg" alt="gun image 29" width="100%"></p>
-<p><img src="/Project/images/gun/bartek-nowak-30.jpg" alt="gun image 30" width="100%"></p>
-<p><img src="/Project/images/gun/bartek-nowak-31.jpg" alt="gun image 31" width="100%"></p>
+    <p><img src="/Project/images/gun/bartek-nowak-10.jpg" alt="gun image 10" width="100%"></p> 
+    <p><img src="/Project/images/gun/bartek-nowak-17.jpg" alt="gun image 17" width="100%"></p>
+    <p><video preload="auto" width="100%" loop autoplay>
+    <source src="/Project/images/gun/tbrender.mp4" type="video/mp4"/> Your browser doesn't support this video. Here is a <a href="movie.mp4" target="_blank">link to the video</a> instead.
+    </video></p>
+    <p><img src="/Project/images/gun/bartek-nowak-24.jpg" alt="gun image 24" width="100%"></p>
+    <p><img src="/Project/images/gun/bartek-nowak-26.jpg" alt="gun image 26" width="100%"></p>
+    <p><img src="/Project/images/gun/bartek-nowak-29.jpg" alt="gun image 29" width="100%"></p>
+    <p><img src="/Project/images/gun/bartek-nowak-30.jpg" alt="gun image 30" width="100%"></p>
+    <p><img src="/Project/images/gun/bartek-nowak-31.jpg" alt="gun image 31" width="100%"></p>
 </body>
+
+<footer>
+    
+    <button><a href="#top"><img src="/Project/upbutton.png" alt="me"></a></button>
+</footer>
 </html>
