--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="header.css">
 </head>
 
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <button><img src="/Project/images/icone.jpg" alt="me"></button>
-                <li> <a href="#">work</a></li>
-                <li> <a href="/Project/about.html">about</a></li>
-                <li> <a href="/Project/shop.html">shop</a></li>
+                <li> <b href="#">work</b></li>
+                <li> <a href="about.html">about</a></li>
+                <li> <a href="shop.html">shop</a></li>
              </ul>
         </nav>
     </header>
