--- a/Project/image_page/mikie.html
+++ b/Project/image_page/mikie.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mikie</title>
+    <link rel="stylesheet" href="/Project/imagepage.css">
 </head>
+<header id="top" >
+    
+    <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="me"></a></button>
+</header>
 <body>
-   <a href="/portfolio.html">voltar</a> <!--quando dou scroll na pagina o botão voltar siga a página, fazer quando souber fazer-->
    <p><img src="/Project/images/mikie/mikey_big.jpg" alt="mikey_big" width="100%"></p>
 
 </body>
+<footer>
+    
+    <button><a href="#top"><img src="/Project/upbutton.png" alt="me"></a></button>
+</footer>
 </html>
