--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <ul>
-                <button><img src="/Project/images/icone.jpg" alt="me"></button>
-                <li> <a href="portfolio.html">work</a></li>
-                <li> <b href="#">about</b></li>
+                <button><img src="/Project/images/Logotipo redondo png.png" alt="me"></button>
                 <li> <a href="shop.html">shop</a></li>
+                <li> <b href="#">about</b></li>
+                <li> <a href="portfolio.html">work</a></li>
              </ul>
         </nav>
 
@@ -21,18 +21,15 @@
 
 
     <main>
-    <p>José Feliciano</p>
+    <h1>José Feliciano</h1>
     <hr>
     <h2>Summary</h2>
-    <p>3D Character</p>
+    <p>3D Modeler</p>
     <p>3D Animator</p>
-    <hr>
-    <h2>Work</h2>
-    <a href="/portfolio.html">Characters/animation</a>
     <hr>
     <h2>Contact</h2>
     <address>
-        Telefone:<a href="tel:+351986051382">(+351)986051382</a>
+        Telefone:<a href="tel:+351964086158">(+351)964086158</a>
         <p>E-mail: <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">josefranciscofeliciano2003@gmail.com</a></p>
     </address>
     <hr>
