--- a/shop.html
+++ b/shop.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <ul>
-                <button><img src="/Project/images/icone.jpg" alt="me"></button>
-                <li> <a href="portfolio.html">work</a></li>
-                <li> <a href="about.html">about</a></li>
+                <button><img src="/Project/images/Logotipo redondo png.png" alt="me"></button>
                 <li> <b href="#">shop</b></li>
+                <li> <a href="about.html">about</a></li>
+                <li> <a href="portfolio.html">work</a></li>
              </ul>
         </nav>
     </header>
