--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <ul>
-                <button><img src="/Project/images/icone.jpg" alt="me"></button>
-                <li> <b href="#">work</b></li>
-                <li> <a href="about.html">about</a></li>
+                <button><img src="/Project/images/Logotipo redondo png.png" alt="me"></button>
                 <li> <a href="shop.html">shop</a></li>
+                <li> <a href="about.html">about</a></li>
+                <li> <b href="#">work</b></li>
              </ul>
         </nav>
     </header>
@@ -22,11 +22,11 @@
     <main>
         <div class="container">
             
-            <a href="/Project/image_page/battle-girl.html"><img src="/Project/images/battle-girl/battle-girl.jpg" alt="battle-girl"  ></a>
-            <a href="/Project/image_page/gate.html"><img src="/Project/images/gates/gates.png" alt="gates" ></a>
-            <a href="/Project/image_page/mikie.html"><img src="/Project/images/mikie/mikie.jpg" alt="mikie" ></a>
-            <a href="/Project/image_page/patrao.html"><img src="/Project/images/patrao/patrao.png" alt="patrao" ></a>
-            <a href="/Project/image_page/gun.html"><img src="/Project/images/gun/bartek-nowak-6.jpg" alt="gun" ></a>
+            <a href="/Project/image_page/AllIn.html"><img src="/Project/images/AllIn/768.png" alt="battle-girl"  ></a>
+            <a href="/Project/image_page/Capsula.html"><img src="/Project/images/Capsula/768.png" alt="gates" ></a>
+            <a href="/Project/image_page/Comando.html"><img src="/Project/images/comando/768.png" alt="mikie" ></a>
+            <a href="/Project/image_page/Estagio.html"><img src="/Project/images/Estágio/768.png" alt="patrao" ></a>
+            <a href="/Project/image_page/Personagem.html"><img src="/Project/images/personagem/768.png" alt="gun" ></a>
         </div>
     </main>
 
