--- a/Project/image_page/Capsula.html
+++ b/Project/image_page/Capsula.html
@@ -1,3 +1,5 @@
+<!--    José Francisco Feliciano / Nº3210446 / PORTFÓLIO / 3ºAno Letivo, 2023-2024 / 2º Semestre / Laboratório de Projeto II / Licenciatura em Design Gráfico e Multimédia / Escola Superior de Artes e Design / Marco heleno / 30/05/2024  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,20 +8,17 @@
     <title>mikie</title>
     <link rel="stylesheet" href="/Project/imagepage.css">
 </head>
-<header id="top" >
-    
-  <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="me"></a></button>
-</header>
-<body>
-   
-   <p><img src="/Project/images/Capsula/untitled.png" alt="battle-girl-big" width="100%"></p>
-   <p><img src="/Project/images/Capsula/lesswireframe.png" alt="battle-girl-big" width="100%"></p>
-   <p><img src="/Project/images/Capsula/multicolor.png" alt="battle-girl-big" width="100%"></p>
-   <p><img src="/Project/images/Capsula/wireframe.png" alt="battle-girl-big" width="100%"></p>
 
+<body>
+  <header id="top" >
+    <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="back"></a></button>
+  </header>
+   <p><img src="/Project/images/Capsula/untitled.png" alt="Capsula untitled" width="100%"></p>
+   <p><img src="/Project/images/Capsula/lesswireframe.png" alt="Capsula lesswireframe" width="100%"></p>
+   <p><img src="/Project/images/Capsula/multicolor.png" alt="capsula multicolor" width="100%"></p>
+   <p><img src="/Project/images/Capsula/wireframe.png" alt="capsula wireframe" width="100%"></p>
+  <footer>  
+    <button><a href="#top"><img src="/Project/upbutton.png" alt="up"></a></button>
+  </footer>
 </body>
-<footer>
-    
-  <button><a href="#top"><img src="/Project/upbutton.png" alt="me"></a></button>
-</footer>
 </html>
