--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,24 @@
+<!--    José Francisco Feliciano / Nº3210446 / PORTFÓLIO / 3ºAno Letivo, 2023-2024 / 2º Semestre / Laboratório de Projeto II / Licenciatura em Design Gráfico e Multimédia / Escola Superior de Artes e Design / Marco heleno / 30/05/2024  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="heder2.css">
 </head>
 
 <body>
     <header>
+        <a class="container-logo" href="#">
+            <img class="logo" src="/Project/images/Logotipo redondo png.png" alt="me">
+            </a>
         <nav>
-            <ul>
-                <button><img src="/Project/images/Logotipo redondo png.png" alt="me"></button>
-                <li> <a href="shop.html">shop</a></li>
-                <li> <a href="about.html">about</a></li>
+            <ul class="nav-links">
                 <li> <b href="#">work</b></li>
+                <li> <a href="about.html">about</a></li>
+                <li> <a href="shop.html">shop</a></li>
              </ul>
         </nav>
     </header>
@@ -22,11 +26,11 @@
     <main>
         <div class="container">
             
-            <a href="/Project/image_page/AllIn.html"><img src="/Project/images/AllIn/768.png" alt="battle-girl"  ></a>
-            <a href="/Project/image_page/Capsula.html"><img src="/Project/images/Capsula/768.png" alt="gates" ></a>
-            <a href="/Project/image_page/Comando.html"><img src="/Project/images/comando/768.png" alt="mikie" ></a>
-            <a href="/Project/image_page/Estagio.html"><img src="/Project/images/Estágio/768.png" alt="patrao" ></a>
-            <a href="/Project/image_page/Personagem.html"><img src="/Project/images/personagem/768.png" alt="gun" ></a>
+            <a href="/Project/image_page/AllIn.html"><img src="/Project/images/AllIn/768.png" alt="AllIn"  ></a>
+            <a href="/Project/image_page/Capsula.html"><img src="/Project/images/Capsula/768.png" alt="Capsula" ></a>
+            <a href="/Project/image_page/Comando.html"><img src="/Project/images/comando/768.png" alt="Comando" ></a>
+            <a href="/Project/image_page/Estagio.html"><img src="/Project/images/Estágio/768.png" alt="Estágio" ></a>
+            <a href="/Project/image_page/Personagem.html"><img src="/Project/images/personagem/768.png" alt="Personagem" ></a>
         </div>
     </main>
 
