--- a/shop.html
+++ b/shop.html
@@ -1,19 +1,23 @@
+<!--    José Francisco Feliciano / Nº3210446 / PORTFÓLIO / 3ºAno Letivo, 2023-2024 / 2º Semestre / Laboratório de Projeto II / Licenciatura em Design Gráfico e Multimédia / Escola Superior de Artes e Design / Marco heleno / 30/05/2024  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shop</title>
-    <link rel="stylesheet" href="headershop.css">
+    <link rel="stylesheet" href="heder2.css">
 </head>
 <body>
     <header>
+        <a class="container-logo" href="#">
+            <img class="logo" src="/Project/images/Logotipo redondo png.png" alt="me">
+            </a>
         <nav>
-            <ul>
-                <button><img src="/Project/images/Logotipo redondo png.png" alt="me"></button>
-                <li> <b href="#">shop</b></li>
-                <li> <a href="about.html">about</a></li>
+            <ul class="nav-links">
                 <li> <a href="portfolio.html">work</a></li>
+                <li> <a href="about.html">about</a></li>
+                <li> <b href="#">shop</b></li>
              </ul>
         </nav>
     </header>
