--- a/Project/image_page/Comando.html
+++ b/Project/image_page/Comando.html
@@ -1,3 +1,5 @@
+<!--    José Francisco Feliciano / Nº3210446 / PORTFÓLIO / 3ºAno Letivo, 2023-2024 / 2º Semestre / Laboratório de Projeto II / Licenciatura em Design Gráfico e Multimédia / Escola Superior de Artes e Design / Marco heleno / 30/05/2024  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,18 +8,19 @@
     <title>mikie</title>
     <link rel="stylesheet" href="/Project/imagepage.css">
 </head>
-<header id="top" >
-    
-    <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="me"></a></button>
-</header>
-<body>
-   <p><img src="/Project/images/comando/comandoswitch.png" alt="gates_big" width="100%"></p>
-   <p><img src="/Project/images/comando/comandoswitch2.png" alt="gates_big" width="100%"></p>
-   <p><img src="/Project/images/comando/comandoswitch3.png" alt="gates_big" width="100%"></p>
 
-</body>
-<footer>
+<body>
+    <header id="top" >
+        <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="back"></a></button>
+    </header>
     
-    <button><a href="#top"><img src="/Project/upbutton.png" alt="me"></a></button>
-</footer>
+    <p><img src="/Project/images/comando/comandoswitch.png" alt="comandoswitch" width="100%"></p>
+    <p><img src="/Project/images/comando/comandoswitch2.png" alt="comandoswitch2" width="100%"></p>
+    <p><img src="/Project/images/comando/comandoswitch3.png" alt="comandoswitch3" width="100%"></p>
+ 
+    <footer>
+        <button><a href="#top"><img src="/Project/upbutton.png" alt="up"></a></button>
+    </footer>
+</body>
+
 </html>
