--- a/about.html
+++ b/about.html
@@ -1,41 +1,51 @@
+<!--    José Francisco Feliciano / Nº3210446 / PORTFÓLIO / 3ºAno Letivo, 2023-2024 / 2º Semestre / Laboratório de Projeto II / Licenciatura em Design Gráfico e Multimédia / Escola Superior de Artes e Design / Marco heleno / 30/05/2024  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="stylesheet" href="headerabout.css">
+    <link rel="stylesheet" href="heder2.css">
 </head>
 <body>
     <header>
+        <a class="container-logo" href="#">
+            <img class="logo" src="/Project/images/Logotipo redondo png.png" alt="me">
+            </a>
         <nav>
-            <ul>
-                <button><img src="/Project/images/Logotipo redondo png.png" alt="me"></button>
-                <li> <a href="shop.html">shop</a></li>
-                <li> <b href="#">about</b></li>
+            <ul class="nav-links">
                 <li> <a href="portfolio.html">work</a></li>
+                <li> <b href="#">about</b></li>
+                <li> <a href="shop.html">shop</a></li>
              </ul>
         </nav>
-
     </header>
 
-
     <main>
-    <h1>José Feliciano</h1>
-    <hr>
-    <h2>Summary</h2>
-    <p>3D Modeler</p>
-    <p>3D Animator</p>
-    <hr>
-    <h2>Contact</h2>
-    <address>
-        Telefone:<a href="tel:+351964086158">(+351)964086158</a>
-        <p>E-mail: <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">josefranciscofeliciano2003@gmail.com</a></p>
-    </address>
-    <hr>
-    <h2>Software</h2>
-    <p>Blender</p>
+        <h1>José Feliciano</h1>
+        <hr>
+        <h2>Summary</h2>
+        <p>3D Modeler</p>
+        <p>3D Animator</p>
+        <hr>
+        <h2>Contact</h2>
+        <address>
+            Telefone:<a href="tel:+351964086158">(+351)964086158</a>
+            <p>E-mail: <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">josefranciscofeliciano2003@gmail.com</a></p>
+        </address>
+        <hr>
+        <h2>Software</h2>
+        <p>Blender</p>
+        <hr>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98558.90559328173!2d-9.280731446131156!3d38.72835669405972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19331a61e4f33b%3A0x400ebbde49036d0!2sLisboa!5e0!3m2!1spt-PT!2spt!4v1716889205082!5m2!1spt-PT!2spt"
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"> 
+        </iframe>
     </main>
-
 </body>
 </html>
