--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <p>Blender</p>
         <hr>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98558.90559328173!2d-9.280731446131156!3d38.72835669405972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19331a61e4f33b%3A0x400ebbde49036d0!2sLisboa!5e0!3m2!1spt-PT!2spt!4v1716889205082!5m2!1spt-PT!2spt"
-            width="600" 
+            width="100%" 
             height="450" 
             style="border:0;" 
             allowfullscreen="" 
