--- a/Project/image_page/Estagio.html
+++ b/Project/image_page/Estagio.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gun</title>
+    <title>estagio</title>
     <link rel="stylesheet" href="/Project/imagepage.css">
 </head>
 
