--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
             <a href="/Project/image_page/Comando.html"><img src="/Project/images/comando/768.png" alt="Comando" ></a>
             <a href="/Project/image_page/Estagio.html"><img src="/Project/images/Estágio/768.png" alt="Estágio" ></a>
             <a href="/Project/image_page/Personagem.html"><img src="/Project/images/personagem/768.png" alt="Personagem" ></a>
+            <a href="/Project/image_page/Blodymask.html"><img src="/Project/images/Blodymask/768.png" alt="Blodymask" ></a>
         </div>
     </main>
 
