--- a/Project/image_page/AllIn.html
+++ b/Project/image_page/AllIn.html
@@ -17,6 +17,9 @@
         <video preload="auto" width="100%" loop autoplay>
             <source src="/Project/images/AllIn/all in.mp4" type="video/mp4"/> Your browser doesn't support this video. Here is a <a href="movie.mp4" target="_blank">link to the video</a> instead.
         </video>
+        <video preload="auto" width="100%" loop autoplay>
+            <source src="/Project/images/Frontpage/0001-0030.mov" type="video/mp4"/> Your browser doesn't support this video. Here is a <a href="movie.mp4" target="_blank">link to the video</a> instead.
+        </video>
     </p>
     <footer>
         <button><a href="#top"><img src="/Project/upbutton.png" alt="up"></a></button>
