--- a/Project/image_page/Pain.html
+++ b/Project/image_page/Pain.html
@@ -15,7 +15,7 @@
         <button><a href="/portfolio.html"><img src="/Project/back_butao.png" alt="back"></a></button>
     </header>
         <p><img src="/Project/images/PainWheel/BasicoTotal3LP.png" alt="character" width="100%"></p>
-        <p><img src="/Project/images/PainWheel/BasicoTotal3LPTras.png" alt="character" width="100%"></p>~
+        <p><img src="/Project/images/PainWheel/BasicoTotal3LPTras.png" alt="character" width="100%"></p>
     <main>
         <div class="container">
             <p><img src="/Project/images/PainWheel/PainWheelImage1.jpg" alt="character"width="45%">
@@ -26,10 +26,10 @@
                 <img src="/Project/images/PainWheel/PainWheelImage6.jpg" alt="character"width="45%">
             </p>
         </div>
-            <img src="/Project/images/PainWheel/2500.png" alt="character"width="49.9%">
-            <img src="/Project/images/PainWheel/25001.png" alt="character"width="49.9%">
-            <img src="/Project/images/PainWheel/25002.png" alt="character"width="49.9%">
-            <img src="/Project/images/PainWheel/25003.png" alt="character"width="49.9%">
+            <img src="/Project/images/PainWheel/2500.png" alt="character"width="49.7%">
+            <img src="/Project/images/PainWheel/25001.png" alt="character"width="49.7%">
+            <img src="/Project/images/PainWheel/25002.png" alt="character"width="49.7%">
+            <img src="/Project/images/PainWheel/25003.png" alt="character"width="49.7%">
     </main>
         <footer>
         <button><a href="#top"><img src="/Project/upbutton.png" alt="up"></a></button>
