--- a/Project/image_page/Pain.html
+++ b/Project/image_page/Pain.html
@@ -26,10 +26,12 @@
                 <img src="/Project/images/PainWheel/PainWheelImage6.jpg" alt="character"width="45%">
             </p>
         </div>
-            <img src="/Project/images/PainWheel/2500.png" alt="character"width="49.7%">
-            <img src="/Project/images/PainWheel/25001.png" alt="character"width="49.7%">
-            <img src="/Project/images/PainWheel/25002.png" alt="character"width="49.7%">
-            <img src="/Project/images/PainWheel/25003.png" alt="character"width="49.7%">
+        <div class="gallery">
+            <img src="/Project/images/PainWheel/2500.png" alt="character">
+            <img src="/Project/images/PainWheel/25001.png" alt="character">
+            <img src="/Project/images/PainWheel/25002.png" alt="character">
+            <img src="/Project/images/PainWheel/25003.png" alt="character">
+        </div>
     </main>
         <footer>
         <button><a href="#top"><img src="/Project/upbutton.png" alt="up"></a></button>
