--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
     <main>
         <div class="container">
             
-            <a href="/Project/image_page/AllIn.html"><img src="/Project/images/AllIn/768.png" alt="AllIn"  ></a>
-            <a href="/Project/image_page/Capsula.html"><img src="/Project/images/Capsula/768.png" alt="Capsula" ></a>
-            <a href="/Project/image_page/Comando.html"><img src="/Project/images/comando/768.png" alt="Comando" ></a>
-            <a href="/Project/image_page/Estagio.html"><img src="/Project/images/Estágio/768.png" alt="Estágio" ></a>
-            <a href="/Project/image_page/Personagem.html"><img src="/Project/images/personagem/768.png" alt="Personagem" ></a>
-            <a href="/Project/image_page/Blodymask.html"><img src="/Project/images/Blodymask/768.png" alt="Blodymask" ></a>
-            <a href="/Project/image_page/Pain.html"><img src="/Project/images/PainWheel/7683.png" alt="PainWheel" ></a>
+            <a href="/Project/Works/AllIn.html"><img src="/Project/images/AllIn/768.png" alt="AllIn"  ></a>
+            <a href="/Project/Works/Capsula.html"><img src="/Project/images/Capsula/768.png" alt="Capsula" ></a>
+            <a href="/Project/Works//Comando.html"><img src="/Project/images/comando/768.png" alt="Comando" ></a>
+            <a href="/Project/Works//Estagio.html"><img src="/Project/images/Estágio/768.png" alt="Estágio" ></a>
+            <a href="/Project/Works//Personagem.html"><img src="/Project/images/personagem/768.png" alt="Personagem" ></a>
+            <a href="/Project/Works//Blodymask.html"><img src="/Project/images/Blodymask/768.png" alt="Blodymask" ></a>
+            <a href="/Project/Works//Pain.html"><img src="/Project/images/PainWheel/7683.png" alt="PainWheel" ></a>
         </div>
     </main>
 
