--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             <a href="/Project/Works//Estagio.html"><img src="/Project/images/Estágio/768.png" alt="Estágio" ></a>
             <a href="/Project/Works//Personagem.html"><img src="/Project/images/personagem/768.png" alt="Personagem" ></a>
             <a href="/Project/Works//Blodymask.html"><img src="/Project/images/Blodymask/768.png" alt="Blodymask" ></a>
-            <a href="/Project/Works//Pain.html"><img src="/Project/images/PainWheel/7683.png" alt="PainWheel" ></a>
+            <a href="/Project/Works//PainWheel.html"><img src="/Project/images/PainWheel/7683.png" alt="PainWheel" ></a>
         </div>
     </main>
 
